// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`refractor elements ParameterElement given value field of Selector Object shape should refract to SelectorElement 1`] = `
(ParameterElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (SelectorElement
      (MemberElement
        (StringElement)
        (StringElement))
      (MemberElement
        (StringElement)
        (StringElement))
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements ParameterElement given value field of arbitrary object shape should refract to ObjectElement 1`] = `
(ParameterElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (StringElement))
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements ParameterElement should refract to semantic ApiDOM tree 1`] = `
(ParameterElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement)))
`;
